plugins {
    id 'application'
    id 'jacoco'
    id 'com.diffplug.spotless' version '8.4.0'
    id 'org.springframework.boot' version '3.5.14'
    id 'org.cyclonedx.bom' version '2.4.1'
}

apply plugin: 'application'
apply plugin: 'io.spring.dependency-management'

group = 'dev.tylercash'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'dev.tylercash.event.PeepBotApplication'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.ai:spring-ai-bom:1.1.5'
    }
}

dependencies {
    implementation 'com.bucket4j:bucket4j_jdk17-core:8.18.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.ibm.icu:icu4j:78.3'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.hibernate.orm:hibernate-community-dialects:7.3.2.Final'
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.postgresql:postgresql'
    implementation 'org.projectlombok:lombok'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.github.resilience4j:resilience4j-ratelimiter:2.4.0'
    implementation 'io.github.resilience4j:resilience4j-retry:2.4.0'
    implementation 'org.springframework.security:spring-security-oauth2-client'
    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'net.javacrumbs.shedlock:shedlock-spring:7.7.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:7.7.0'
    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
    implementation 'io.micrometer:micrometer-registry-otlp'
    implementation("net.dv8tion:JDA:6.4.1") {
        exclude module: 'opus-java'
    }
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
    implementation 'org.springframework.statemachine:spring-statemachine-core:4.0.1'
    implementation 'org.jfree:jfreechart:1.5.6'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.15.2'
    implementation 'org.springframework.ai:spring-ai-starter-model-transformers'
    implementation 'org.springframework.ai:spring-ai-starter-model-ollama'

    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testAnnotationProcessor 'org.projectlombok:lombok:1.18.46'

    testCompileOnly 'org.projectlombok:lombok:1.18.46'
    testImplementation "org.testcontainers:testcontainers"
    testImplementation 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.wiremock:wiremock-standalone:3.13.2'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'e2e'
    }
    testLogging {
        exceptionFormat = 'full'
        showStackTraces = true
    }
    maxParallelForks = 1
    finalizedBy jacocoTestReport
}

tasks.register('generateOpenApiDocs', Test) {
    description = 'Regenerates backend/openapi.json from the live OpenAPI endpoint.'
    group = 'documentation'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        // intentionally only run the spec generator
    }
    filter {
        includeTestsMatching 'dev.tylercash.event.openapi.OpenApiSpecGenerationTest'
    }
}

tasks.register('e2eTest', Test) {
    description = 'Runs e2e tests against real external services (Discord, DB). Requires credentials in environment.'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'e2e'
    }
    shouldRunAfter test
}

jacoco {
    toolVersion = '0.8.14'
}

jacocoTestReport {
    dependsOn test
    mustRunAfter e2eTest
    // Pick up exec files from both test and e2eTest when both have run
    executionData fileTree(layout.buildDirectory.dir("jacoco")).include("*.exec")
    reports {
        xml.required = true
        html.required = true
    }
}

spotless {
    java {
        target 'src/**/*.java'
        palantirJavaFormat('2.50.0')
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

def modelDir = file("src/main/resources/models")
def tokenizerUrl = "https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2/resolve/main/tokenizer.json"
def modelUrl = "https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2/resolve/main/onnx/model.onnx"

tasks.register("downloadModel") {
    description = "Downloads all-MiniLM-L6-v2 ONNX model files into src/main/resources/models/ for classpath bundling."
    group = "build"
    outputs.files(file("${modelDir}/tokenizer.json"), file("${modelDir}/model.onnx"))
    onlyIf { !file("${modelDir}/model.onnx").exists() || !file("${modelDir}/tokenizer.json").exists() }
    doLast {
        modelDir.mkdirs()
        def tokenizerFile = file("${modelDir}/tokenizer.json")
        if (!tokenizerFile.exists()) {
            logger.lifecycle("Downloading tokenizer.json (~0.5MB)...")
            new URL(tokenizerUrl).withInputStream { ins -> tokenizerFile.bytes = ins.bytes }
        }
        def modelFile = file("${modelDir}/model.onnx")
        if (!modelFile.exists()) {
            logger.lifecycle("Downloading model.onnx (~23MB)...")
            new URL(modelUrl).withInputStream { ins -> modelFile.bytes = ins.bytes }
        }
        logger.lifecycle("Model files ready in ${modelDir}")
    }
}

processResources.dependsOn("downloadModel")

tasks.named("bootJar") {
    launchScript()
}

tasks.bootBuildImage {
    imageName = "ghcr.io/tyler-cash/peep-bot-backend:latest"
    builder = "paketobuildpacks/builder-jammy-full:latest"
    environment.putAll([
            "BP_OCI_SOURCE"          : "https://github.com/Tyler-Cash/peep-bot",
            "BP_OCI_URL"             : "https://github.com/Tyler-Cash/peep-bot",
            "BP_OCI_DESCRIPTION"     : "Peep Bot backend — Spring Boot Discord event management API",
            "BPE_JAVA_TOOL_OPTIONS"  : "-Djava.awt.headless=true",
    ])
}
